<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/base_bg">

        <TextView
            android:id="@+id/tv_in_verification_item_of_verification"
            android:layout_width="@dimen/width_of_item_in_registerActivity"
            android:layout_height="@dimen/height_of_leftItem_in_registerActivity"
            android:layout_weight="0"
            android:text="@string/string_of_verification"
            style="@style/leftItem_in_registerActivity"/>

        <com.sintn.hera.mobile.cash.widget.view.EditTextWithFrame
            android:id="@+id/et_in_verification_item_of_verification"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_of_leftItem_in_registerActivity"
            android:layout_weight="1"
            android:hint="@string/hint_string_of_verification"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            style="@style/item_in_registerActivity"/>

        <Button
            android:id="@+id/btn_in_verification_item_of_verification"
            android:layout_width="@dimen/width_of_item_in_registerActivity"
            android:layout_height="@dimen/height_of_leftItem_in_registerActivity"
            android:hint="@string/get_verificationCode"
            style="@style/btn_in_registerActivity_for_verification"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/normal_divider"/>

</LinearLayout>