<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_in_maincativity_of_fragment_create_order_for_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cf0f0f0"
    android:orientation="vertical"
    android:padding="4.8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/selector_shape_theme_color_btn"
        android:orientation="horizontal"
        android:padding="0.5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4.8dp"
            android:adjustViewBounds="true"
            android:background="@color/transparent"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/yuan_logo" />

        <com.sintn.hera.mobile.cash.widget.view.EditTextWithFrame
            android:id="@+id/et_in_maincativity_of_fragment_create_order_for_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:inputType="number"
            android:maxLength="9"
            android:maxLines="1"
            android:hint="@string/mainactivity_of_order_create_hint"
            android:digits="@string/digist_string_of_decimal_number"
            android:textColor="@color/first_class_text"
            android:textSize="@dimen/normal_textSize"
            tools:ignore="SpUsage,UnusedAttribute" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/selector_shape_theme_color_btn"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_in_maincativity_of_fragment_create_order_for_weixin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@drawable/selector_shape_revert_theme_color_btn"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4.8dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/weixin_logo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4.8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/mainactivity_of_order_create_weixin"
                android:textColor="@color/selector_black_white"
                android:textSize="@dimen/normal_textSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_in_maincativity_of_fragment_create_order_for_alipay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@drawable/selector_shape_revert_theme_color_btn"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4.8dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/alipay_logo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4.8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/mainactivity_of_order_create_alipay"
                android:textColor="@color/selector_black_white"
                android:textSize="@dimen/normal_textSize" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>